# gpist_cadastro

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  todo.md
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
baia_farta/: admin.py  apps.py  models.py  urls.py  views.py
baia_farta/migrations/: 0001_initial.py  0002_habitacao_bloco.py  0003_contrato_habitacao.py
cad_centralidades/: asgi.py  settings.py  urls.py  wsgi.py
pages/: urls.py  views.py
static/CACHE/css/: output.015e0b437a14.css  output.025a0385c2a3.css  output.02a745f7b5e3.css  output.0392de24d97f.css  output.083f07b0943b.css  output.0ae7716a6eef.css  output.0bed92953e21.css  output.18681ada013f.css  output.19e48e0eda31.css  output.1f72d9de132c.css  output.23024a12e039.css  output.256e91903d58.css  output.2f8f0d7dc29d.css  output.341793490ead.css  output.355b8e6ef50d.css  output.3a47f00a8e32.css  output.3d09119c2d71.css  output.3e25370d94b5.css  output.3f577cbfa454.css  output.4b9559f2e7ea.css  output.542780e70622.css  output.5bd324c40644.css  output.5ce7fc6cb038.css  output.63d03139469b.css  output.683b69e66c97.css  output.6bfb0032b527.css  output.6f5545f9beac.css  output.75cd68943992.css  output.766152a395b9.css  (+34 more)
static/src/: output.css
templates/: _base.html  centralidades.html  home.html  search_results.html
templates/baiafarta/: contrato_create.html  habitacao_create.html  habitacao_list.html  morador_create.html  morador_detail.html
templates/registration/: login.html  signup.html
