[tool.poetry]
name = "gpist_cadastro"
version = "0.1.0"
description = "cadastro das centralidades e outros"
authors = ["agcpomps <agcpomps@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-compressor = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
